Fix T46521: Python: bvh.ray_cast doesn't find a plane facing in the other direction under certain circumstances

The issue was caused by wrong sign check. It originally came from more optimized
Cycles code where because of other reasons it wasn't visible yet. But in fact it
should be solved there as well.